--- a/index.html
+++ b/index.html
@@ -3,42 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Register</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <title>Easy Quiz</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class = "container">
-        <h1>Register...</h1>
-            
-        <div class="quiz-container">
-            <form action="/" method="post">
-                <table>
-                    <tr>
-                        <td>Name:</td>
-                        <td><input type="text" name="name" ></td>
-                    </tr>
-                    <tr>
-                        <td>Age:</td>
-                        <td><input type="text" name="age" ></td>
-                    </tr>
-                    <tr>
-                        <td>Phone:</td>
-                        <td><input type="text" name="phone" placeholder="xxx-xxx-xxxx"></td>
-                    </tr>
-                    <tr>
-                        <td>Email:</td>
-                        <td><input type="text" name="email" ></td>
-                    </tr>
-                    <tr>
-                        <td><button class="button" type="submit" name="submit">Insert</button></td>
-                    </tr>
-            </form>
+    <div class="container">
+        <div class="question-container">
+            <h2>1. PIM ย่อมาจากอะไร?</h2>
+            <div class="answer">
+                <button onclick="checkAnswer(0, 0)">พีไอเอ็ม</button>
+                <button onclick="checkAnswer(0, 1)">ปิ๋ม</button>
+                <button onclick="checkAnswer(0, 2)">พิม</button>
+                <button onclick="checkAnswer(0, 3)">ภีม</button>
+            </div>
+            <p id="question1-feedback"></p>
         </div>
-           
-        <p id="result3"></p>     
+        <div class="question-container">
+            <h2>2. AI ย่อมาจากอะไร?</h2>
+            <div class="answer">
+                <button onclick="checkAnswer(1, 0)">Automation Intelligence</button>
+                <button onclick="checkAnswer(1, 1)">Artificial Intelligence</button>
+                <button onclick="checkAnswer(1, 2)">Automation Information</button>
+                <button onclick="checkAnswer(1, 3)">Artificial Information</button>
+            </div>
+            <p id="question2-feedback"></p>
+        </div>
+
+        <div id="score-container">
+            <h2>คะแนนรวม: <span id="total-score">0</span></h2>
+        </div>
+        <button id="refresh-button" onclick="refreshPage()">ทำข้อสอบใหม่</button>
     </div>
-   
-   
-    <script src="script.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
